fix: Migrate old version naming (v10g/v11/v12) to Phase 0-G
- Fix CRITICAL: Python checkpoint hardcoding (4 files)
  * unity_hybrid_trainer.py: v12_phaseB -> phase-B
  * train_hybrid_rl.py: v12_phaseB -> phase-B
  * hybrid_policy.py: v12_phaseB -> phase-B
  * vehicle_ppo_phase-B.yaml: v12_phaseB -> phase-B
  * vehicle_ppo_phase-F.yaml: phase-E_v2 -> phase-E

- Update HIGH: Documentation cross-references (28 files)
  * PROGRESS.md: v10g -> Phase 0 (except Version Mapping Table)
  * TRAINING-LOG.md: v10g -> Phase 0
  * LEARNING-ROADMAP.md: v10g -> Phase 0
  * PRD.md: v12 Phase -> Phase
  * All experiment phase docs updated

- Update HIGH: Claude agent specifications (6 files)
  * training-analyst.md, training-doc-manager.md, training-monitor.md
  * training-orchestrator.md, training-planner.md, training-site-publisher.md
  * Trigger keywords updated: v10g -> Phase 0, v12 Phase X -> Phase X

- Add deprecation notices to archive configs (5 files)
  * experiments/phase-A-overtaking/config/vehicle_ppo_v12_phaseA.yaml
  * experiments/phase-B-decision/config/vehicle_ppo_v12_phaseB.yaml
  * experiments/phase-C-multi-npc/config/vehicle_ppo_v12_phaseC.yaml
  * experiments/phase-F-multi-lane/config/vehicle_ppo_v12_phaseF.yaml
  * experiments/phase-G-intersection/config/vehicle_ppo_v12_phaseG.yaml

- Preserve Version Mapping Table (PROGRESS.md:164-178)

Resolves 119/174 naming inconsistencies (CRITICAL + HIGH priority)
See docs/PROGRESS.md Version Mapping Reference for migration details

--- a/experiments/phase-A-overtaking/config/vehicle_ppo_v12_phaseA.yaml
+++ b/experiments/phase-A-overtaking/config/vehicle_ppo_v12_phaseA.yaml
@@ -1,3 +1,7 @@
+# DEPRECATED: This config uses old naming (v12_phaseA).
+# For current training, use: python/configs/planning/vehicle_ppo_phase-A.yaml
+# This file preserved for historical experiment reproducibility only.
+#
 # E2EDrivingAgent PPO v12 Phase A: Overtaking Skill Acquisition
 # Strategy: Dense reward for overtaking sub-phases + very slow NPC
 # Usage: mlagents-learn python/configs/planning/vehicle_ppo_phase-A.yaml --run-id=phase-A --initialize-from=curriculum_v11_overtake
